parser/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature ';'
    9             | error ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' error '}'

   14 formal_list: %empty
   15            | formal_list1
   16            | error

   17 formal_list1: formal
   18             | formal_list1 ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expr_list: %empty
   21          | expr_list1
   22          | error

   23 expr_list1: expr
   24           | expr_list1 ',' expr

   25 expr_stmts: expr ';'
   26           | expr_stmts expr ';'
   27           | error ';'

   28 case_list: single_case
   29          | case_list single_case

   30 single_case: OBJECTID ':' TYPEID DARROW expr ';'

   31 let_assignment: OBJECTID ':' TYPEID IN expr
   32               | OBJECTID ':' TYPEID ASSIGN expr IN expr
   33               | OBJECTID ':' TYPEID ',' let_assignment
   34               | OBJECTID ':' TYPEID ASSIGN expr ',' let_assignment
   35               | error IN expr
   36               | OBJECTID ':' TYPEID IN error

   37 let_stmt: LET let_assignment

   38 case_stmt: CASE expr OF case_list ESAC

   39 expr: OBJECTID ASSIGN expr
   40     | expr '.' OBJECTID '(' expr_list ')'
   41     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   42     | OBJECTID '(' expr_list ')'
   43     | IF expr THEN expr ELSE expr FI
   44     | WHILE expr LOOP expr POOL
   45     | WHILE error
   46     | WHILE expr error
   47     | WHILE expr LOOP error
   48     | WHILE expr LOOP expr error
   49     | '{' expr_stmts '}'
   50     | let_stmt
   51     | case_stmt
   52     | NEW TYPEID
   53     | ISVOID expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr '*' expr
   57     | expr '/' expr
   58     | '~' expr
   59     | expr '<' expr
   60     | expr LE expr
   61     | expr '=' expr
   62     | NOT expr
   63     | '(' expr ')'
   64     | OBJECTID
   65     | INT_CONST
   66     | STR_CONST
   67     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 13 40 41 42 63
')' (41) 10 13 40 41 42 63
'*' (42) 56
'+' (43) 54
',' (44) 18 24 33 34
'-' (45) 55
'.' (46) 40 41
'/' (47) 57
':' (58) 10 11 12 13 19 30 31 32 33 34 36
';' (59) 4 5 6 8 9 25 26 27 30
'<' (60) 59
'=' (61) 61
'@' (64) 41
'{' (123) 4 5 10 13 49
'}' (125) 4 5 10 13 49
'~' (126) 58
error (256) 6 9 13 16 22 27 35 36 45 46 47 48
CLASS (258) 4 5
ELSE (259) 43
FI (260) 43
IF (261) 43
IN (262) 31 32 35 36
INHERITS (263) 5
LET (264) 37
LOOP (265) 44 47 48
POOL (266) 44
THEN (267) 43
WHILE (268) 44 45 46 47 48
CASE (269) 38
ESAC (270) 38
OF (271) 38
DARROW (272) 30
NEW (273) 52
ISVOID (274) 53
STR_CONST (275) 66
INT_CONST (276) 65
BOOL_CONST (277) 67
TYPEID (278) 4 5 10 11 12 13 19 30 31 32 33 34 36 41 52
OBJECTID (279) 10 11 12 13 19 30 31 32 33 34 36 39 40 41 42 64
ASSIGN (280) 12 32 34 39
NOT (281) 62
LE (282) 60
ERROR (283)
LETA (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8 9, on right: 4 5 8
feature (51)
    on left: 10 11 12 13, on right: 8
formal_list (52)
    on left: 14 15 16, on right: 10 13
formal_list1 (53)
    on left: 17 18, on right: 15 18
formal (54)
    on left: 19, on right: 17 18
expr_list (55)
    on left: 20 21 22, on right: 40 41 42
expr_list1 (56)
    on left: 23 24, on right: 21 24
expr_stmts (57)
    on left: 25 26 27, on right: 26 49
case_list (58)
    on left: 28 29, on right: 29 38
single_case (59)
    on left: 30, on right: 28 29
let_assignment (60)
    on left: 31 32 33 34 35 36, on right: 33 34 37
let_stmt (61)
    on left: 37, on right: 50
case_stmt (62)
    on left: 38, on right: 51
expr (63)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67, on right: 10 12 23 24 25 26 30
    31 32 34 35 38 39 40 41 43 44 46 47 48 53 54 55 56 57 58 59 60
    61 62 63


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (feature_list)
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 14


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 13

    9 feature_list: error . ';'

    ';'  shift, and go to state 16


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (feature_list)
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 20


State 16

    9 feature_list: error ';' .

    $default  reduce using rule 9 (feature_list)


State 17

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr
   13        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' error '}'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 19

    8 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 24


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25

    feature  go to state 19


State 21

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' error '}'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 27

    ')'  reduce using rule 14 (formal_list)

    formal_list   go to state 28
    formal_list1  go to state 29
    formal        go to state 30


State 22

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 31


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    8 feature_list: feature_list feature ';' .

    $default  reduce using rule 8 (feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 32


State 26

   16 formal_list: error .

    $default  reduce using rule 16 (formal_list)


State 27

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 28

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list . ')' ':' TYPEID '{' error '}'

    ')'  shift, and go to state 34


State 29

   15 formal_list: formal_list1 .
   18 formal_list1: formal_list1 . ',' formal

    ','  shift, and go to state 35

    $default  reduce using rule 15 (formal_list)


State 30

   17 formal_list1: formal .

    $default  reduce using rule 17 (formal_list1)


State 31

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 11 (feature)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 33

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 34

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list ')' . ':' TYPEID '{' error '}'

    ':'  shift, and go to state 38


State 35

   18 formal_list1: formal_list1 ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 39


State 36

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 56


State 37

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 38

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'
   13        | OBJECTID '(' formal_list ')' ':' . TYPEID '{' error '}'

    TYPEID  shift, and go to state 57


State 39

   18 formal_list1: formal_list1 ',' formal .

    $default  reduce using rule 18 (formal_list1)


State 40

   43 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 58


State 41

   37 let_stmt: LET . let_assignment

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let_assignment  go to state 61


State 42

   44 expr: WHILE . expr LOOP expr POOL
   45     | WHILE . error
   46     | WHILE . expr error
   47     | WHILE . expr LOOP error
   48     | WHILE . expr LOOP expr error

    error       shift, and go to state 62
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 63


State 43

   38 case_stmt: CASE . expr OF case_list ESAC

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 64


State 44

   52 expr: NEW . TYPEID

    TYPEID  shift, and go to state 65


State 45

   53 expr: ISVOID . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 66


State 46

   66 expr: STR_CONST .

    $default  reduce using rule 66 (expr)


State 47

   65 expr: INT_CONST .

    $default  reduce using rule 65 (expr)


State 48

   67 expr: BOOL_CONST .

    $default  reduce using rule 67 (expr)


State 49

   39 expr: OBJECTID . ASSIGN expr
   42     | OBJECTID . '(' expr_list ')'
   64     | OBJECTID .

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 64 (expr)


State 50

   62 expr: NOT . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 69


State 51

   58 expr: '~' . expr

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 70


State 52

   49 expr: '{' . expr_stmts '}'

    error       shift, and go to state 71
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    expr_stmts  go to state 72
    let_stmt    go to state 54
    case_stmt   go to state 55
    expr        go to state 73


State 53

   63 expr: '(' . expr ')'

    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    let_stmt   go to state 54
    case_stmt  go to state 55
    expr       go to state 74


State 54

   50 expr: let_stmt .

    $default  reduce using rule 50 (expr)


State 55

   51 expr: case_stmt .

    $default  reduce using rule 51 (expr)


State 56

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   40 expr: expr . '.' OBJECTID '(' expr_list ')'
   41     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . '=' expr

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 12 (feature)


State 57

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID . '{' error '}'

    '{'  shift, and go to state 84


State 58

   40 expr: expr . '.' OBJECTID '(' expr_list ')'
   41     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   43     | IF expr . THEN expr ELSE expr FI
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . '=' expr

    THEN  shift, and go to state 85
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


State 59

   35 let_assignment: error . IN expr

    IN  shift, and go to state 86


State 60

   31 let_assignment: OBJECTID . ':' TYPEID IN expr
   32               | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   33               | OBJECTID . ':' TYPEID ',' let_assignment
   34               | OBJECTID . ':' TYPEID ASSIGN expr ',' let_assignment
   36               | OBJECTID . ':' TYPEID IN error

    ':'  shift, and go to state 87


State 61

   37 let_stmt: LET let_assignment .

    $default  reduce using rule 37 (let_stmt)


State 62

   45 expr: WHILE error .

    $default  reduce using rule 45 (expr)


State 63

   40 expr: expr . '.' OBJECTID '(' expr_list ')'
   41     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | WHILE expr . LOOP expr POOL
   46     | WHILE expr . error
   47     | WHILE expr . LOOP error
   48     | WHILE expr . LOOP expr error
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . '=' expr

    error  shift, and go to state 88
    LOOP   shift, and go to state 89
    LE     shift, and go to state 75
    '<'    shift, and go to state 76
    '='    shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '@'    shift, and go to state 82
    '.'    shift, and go to state 83


State 64

   38 case_stmt: CASE expr . OF case_list ESAC
   40 expr: expr . '.' OBJECTID '(' expr_list ')'
   41     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


State 65

   52 expr: NEW TYPEID .

    $default  reduce using rule 52 (expr)


State 66

   40 expr: expr . '.' OBJECTID '(' expr_list ')'
   41     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   53     | ISVOID expr .
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . '=' expr

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 53 (expr)


State 67

   39 expr: OBJECTID ASSIGN . expr
